# Parterm

./: Cargo.toml  README.md  deny.toml
src/: lib.rs  main.rs  parterm.rs  shell.rs
