[package]
edition = "2021"
name = "parterm"
version = "0.1.1"
authors = ["Razvan Rotari <razvanrotari@posteo.net>"]
license = "MIT"
homepage = "https://github.com/RazvanRotari/Parterm"
categories = ["command-line-utilities"]
description = "Remote control for your terminal"
repository = "https://github.com/RazvanRotari/Parterm"
readme = "README.md"
keywords = ["terminal", "remote-control", "pty"]

[dependencies]
libc = "0.2"
termion = "1"
clap = "2.33.3"
anyhow = "1.0.44"
errno = "0.2.8"
nix = "0.23.0"
flexi_logger = "0.22.1"
log = "0.4.14"
crossbeam-channel = "0.5.1"
signal-hook = "0.3.13"

[[bin]]
name = "parterm"
doc = true
